fixing margin at bottom of footer to remove whitespace

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -39,7 +39,5 @@
   padding-bottom: 150px;
 }
 
-.body {
-  background-color: #D0D0D0;
-}
+
 
